✨ [Feat]: Add inherit example with SSR and zoneless

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,38 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularStructureTemplate</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>Angular</title>
+    <meta
+      name="description"
+      content="Descripción clara y concisa de la aplicación para buscadores."
+    />
+    <meta
+      name="keywords"
+      content="Angular, SSR, SEO, Zoneless, Aplicación Web"
+    />
+    <meta name="author" content="Ferran - Desarrollador" />
+    <link rel="canonical" href="https://www.tuapp.com/" />
+
+    <!-- Open Graph para redes sociales -->
+    <meta property="og:title" content="Nombre de tu App" />
+    <meta
+      property="og:description"
+      content="Descripción clara y concisa para redes sociales."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.tuapp.com/" />
+    <meta
+      property="og:image"
+      content="https://www.tuapp.com/assets/og-image.png"
+    />
+
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
